<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bloodtolife.blood_to_life.Main_screen.Find_fragement">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1">
    <com.rey.material.widget.Button
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height"
        android:layout_margin="@dimen/dimen8"
        android:layout_weight="0.5"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/ic_map_marker"
        android:gravity="center"
        android:padding="@dimen/dimen8"
        android:text="@string/your_location"
        android:textColor="@color/white"
        app:v_styleId="@style/LightRaiseColorButtonRippleStyle"/>
    <com.rey.material.widget.Button
        android:id="@+id/blood_group"
        android:layout_width="0dp"
        android:layout_height="@dimen/bt_height"
        android:layout_marginBottom="@dimen/dimen8"
        android:layout_marginRight="@dimen/dimen8"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_weight="0.5"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/ic_water"
        android:gravity="center"
        android:padding="@dimen/dimen8"
        android:text="@string/blood_group"
        android:textColor="@color/white"
        app:v_styleId="@style/LightRaiseColorButtonRippleStyle"/>
</LinearLayout>
    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/users_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen42" />
    <TextView
        android:id="@+id/nodata"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/no_data_please_post"
        android:visibility="gone" />
    <com.rey.material.widget.ProgressView
        android:id="@+id/sin_p_cir"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:v_styleId="@style/LightInCircularProgressDrawable"/>

</FrameLayout>
