<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"

    android:layout_width="fill_parent"


    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen36"
        android:layout_marginRight="@dimen/dimen36"
        android:layout_marginStart="@dimen/dimen36"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/dimen3"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


            <com.rey.material.widget.EditText
                android:id="@+id/name"
                style="@style/LightEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:editable="false"
                android:hint="Name"
                android:inputType="text"
                android:textSize="15sp"
                app:et_dividerPadding="8dp"
                app:et_inputId="@+id/textfield_et_label_input"
                app:et_labelPadding="8dp"
                app:et_supportMode="none" />

            <com.rey.material.widget.EditText
                android:id="@+id/email"
                style="@style/LightEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:editable="false"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                app:et_dividerPadding="8dp"
                app:et_inputId="@+id/textfield_et_label_input"
                app:et_labelPadding="8dp"
                app:et_supportMode="none" />
            <com.rey.material.widget.EditText
                android:id="@+id/phno"
                style="@style/LightEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:editable="false"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="15sp"
                app:et_dividerPadding="8dp"
                app:et_inputId="@+id/textfield_et_label_input"
                app:et_labelPadding="8dp"
                app:et_supportMode="none" />
            <com.rey.material.widget.Spinner
                android:id="@+id/spinner_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dimen8"
                app:spn_arrowColor="@color/colorControlNormal"
                app:spn_label="@string/select_bld"
             />
            <com.janardhan.blood2life.utils.p_MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/colorControlNormal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
